--- a/pages/html/about.wxss
+++ b/pages/html/about.wxss
@@ -1,1 +1,43 @@
 /* pages/html/about.wxss */
+@import "../../utils/iconfont.wxss";
+@import "../../utils/main.wxss";
+
+.mui-content {
+  background-color: white;
+}
+
+.qsyx {
+  font-size: 20px;
+  padding: 10px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.spanlable {
+  font-size: 15px;
+}
+
+.message {
+  font-size: 15px;
+  margin-top: 20px;
+  padding: 10px;
+  text-align: left;
+  text-indent: 30px;
+}
+
+.message2 {
+  font-size: 15px;
+  padding: 10px;
+  margin-top: -10px;
+  text-align: left;
+  text-indent: 30px;
+}
+
+.message3 {
+  font-size: 15px;
+  padding: 10px;
+  margin-top: -10px;
+  text-align: left;
+  text-indent: 30px;
+  text-decoration-line: underline;
+}
