--- a/app.wxss
+++ b/app.wxss
@@ -1963,7 +1963,7 @@ input[type=submit].mui-active:enabled, input[type=submit]:enabled:active {
 .mui-table-view-cell {
   position: relative;
   overflow: hidden;
-  padding: 11px 15px;
+  padding: 15rpx 15rpx;
   -webkit-touch-callout: none;
 }
 
@@ -1971,7 +1971,8 @@ input[type=submit].mui-active:enabled, input[type=submit]:enabled:active {
   position: absolute;
   right: 0;
   bottom: 0;
-  left: 15px;
+  left: 15rpx;
+  right: 15rpx;
   height: 1px;
   content: '';
   -webkit-transform: scaleY(0.5);
