--- a/pages/html/home.wxss
+++ b/pages/html/home.wxss
@@ -7,7 +7,7 @@
   display: inline-block;
   padding: 5px 7px;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 13px;
   color: #fff;
   vertical-align: baseline;
   white-space: nowrap;
@@ -30,7 +30,12 @@
   background-color: #24f00c;
 }
 
-.home-dz{
+.home-dz {
   font-size: 25rpx;
   color: #666;
 }
+
+.row-padding {
+  font-size: 28rpx;
+}
+
