--- a/pages/html/home.wxml
+++ b/pages/html/home.wxml
@@ -12,7 +12,7 @@
     <view class="searchBar {{search ? 's-state-1' : 's-state-2'}}">
       <view class="mui-row searchview">
         <view class="mui-col-sm-10 mui-col-xs-9">
-          <input class="searchInput mui-ellipsis" bindinput="skeyword" placeholder="请输入搜索关键词"/>
+          <input class="searchInput mui-ellipsis" bindinput="skeyword" placeholder="请输入搜索关键词" />
         </view>
         <view class="mui-col-sm-2 mui-col-xs-3">
           <view class="searchBtn button" bindtap="search">搜索</view>
@@ -37,49 +37,54 @@
         </form>
       </view>
       <text class='labelview' hidden='{{hidden}}'>本月热门</text>
-      <view class="mui-table-view" wx:for="{{hotlist}}" wx:key="item.articleId" data-bean="{{item}}" bindtap="openDetail">
-        <view class="mui-row row-padding">
-          <view class="mui-col-xs-1 mui-col-sm-1">
-            <view class="{{item.classname}}">{{index+1}}</view>
-          </view>
-          <view class="mui-col-xs-8 mui-col-sm-8">
-            <view class="mui-ellipsis" style="padding: 2px 0px;">{{item.articleTitle}}</view>
-          </view>
-          <view class="mui-col-xs-3 mui-col-sm-3">
-            <view class="mui-ellipsis" style="color: gray;padding: 2px 0px;">阅读({{item.readTime}})</view>
-          </view>
-        </view>
+      <view class="mui-table-view">
+        <form wx:for="{{hotlist}}" wx:key="item.articleId" data-bean="{{item}}" data-type="openDetail" bindsubmit="formSubmit" report-submit>
+          <button class="form-btn" form-type="submit">
+            <view class="mui-row row-padding">
+              <view class="mui-col-xs-1 mui-col-sm-1">
+                <view class="{{item.classname}}">{{index+1}}</view>
+              </view>
+              <view class="mui-col-xs-8 mui-col-sm-8">
+                <view class="mui-ellipsis" style="padding: 2px 0px;">{{item.articleTitle}}</view>
+              </view>
+              <view class="mui-col-xs-3 mui-col-sm-3">
+                <view class="mui-ellipsis" style="color: gray;padding: 2px 0px;">阅读({{item.readTime}})</view>
+              </view>
+            </view>
+          </button>
+        </form>
       </view>
       <text class='labelview' hidden='{{hidden}}'>最近更新</text>
-      <view class="mui-table-view">
-        <view class="mui-table-view-cell" wx:for="{{uptodatelist}}" wx:key="item.articleId" data-bean="{{item}}" bindtap="openDetail">
-          <view class="mui-row">
-            <view class="imgview mui-col-xs-2 mui-col-sm-2">
-              <image class="mui-pull-left" lazy-load="true" src="{{item.articleImg}}"></image>
-            </view>
-            <view class="textview mui-col-xs-8 mui-col-sm-8">
-              <view class="article-title-text article-title-height">
-                <view class="mui-ellipsis-2">{{item.articleTitle}}</view>
+      <view class="mui-table-view" wx:for="{{uptodatelist}}" wx:key="item.articleId">
+        <form data-type="openDetail" data-bean="{{item}}" bindsubmit="formSubmit" report-submit>
+          <button class="form-btn" form-type="submit">
+            <view class="mui-table-view-cell">
+              <view class="mui-row">
+                <view class="imgview mui-col-xs-2 mui-col-sm-2">
+                  <image class="mui-pull-left" lazy-load="true" src="{{item.articleImg}}"></image>
+                </view>
+                <view class="textview mui-col-xs-8 mui-col-sm-8">
+                  <view class="article-title-text article-title-height">
+                    <view class="mui-ellipsis-2">{{item.articleTitle}}</view>
+                  </view>
+                  <view class="article-title-text mui-row">
+                    <view class="time mui-col-xs-4 mui-col-sm-4">
+                      <view class="iconfont icon-shijian" style='font-size:22rpx;'>{{item.publishTime}}</view>
+                    </view>
+                    <view class="author mui-col-xs-3 mui-col-sm-3">
+                      <view class="iconfont icon-kanguo" style='font-size:22rpx;'>{{item.readTime}}</view>
+                    </view>
+                    <view class="author mui-col-xs-2 mui-col-sm-2">
+                      <view class="iconfont icon-xiangqu" style='font-size:22rpx;'>{{item.niceNum}}</view>
+                    </view>
+                    <view class="typename">{{item.typeName}}</view>
+                  </view>
+                </view>
               </view>
-              <view class="article-title-text mui-row">
-                <view class="time mui-col-xs-4 mui-col-sm-4">
-                  <view class="iconfont icon-shijian" style='font-size:22rpx;'>{{item.publishTime}}</view>
-                </view>
-                <view class="author mui-col-xs-3 mui-col-sm-3">
-                  <view class="iconfont icon-kanguo" style='font-size:22rpx;'>{{item.readTime}}</view>
-                </view>
-                <view class="author mui-col-xs-2 mui-col-sm-2">
-                  <view class="iconfont icon-xiangqu" style='font-size:22rpx;'>{{item.niceNum}}</view>
-                </view>
-                <view class="typename">{{item.typeName}}</view>
-              </view>
             </view>
-          </view>
-        </view>
+          </button>
+        </form>
       </view>
     </scroll-view>
-
-
-
   </view>
 </view>
