--- a/app.wxss
+++ b/app.wxss
@@ -262,9 +262,6 @@ sub {
   bottom: -.25em;
 }
 
-img {
-  border: 0;
-}
 
 svg:not(:root) {
   overflow: hidden;
@@ -288,28 +285,6 @@ code, kbd, pre, samp {
   font-size: 1em;
 }
 
-button, input, optgroup, select, textarea {
-  font: inherit;
-  margin: 0;
-  color: inherit;
-}
-
-button {
-  overflow: visible;
-}
-
-button, select {
-  text-transform: none;
-}
-
-button, html input[type=button], input[type=reset], input[type=submit] {
-  cursor: pointer;
-  -webkit-appearance: button;
-}
-
-button[disabled], html input[disabled] {
-  cursor: default;
-}
 
 input {
   line-height: normal;
@@ -320,15 +295,6 @@ input[type=checkbox], input[type=radio] {
   padding: 0;
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-input[type=search]::-webkit-search-cancel-button,
-input[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
 
 fieldset {
   margin: 0 2px;
@@ -471,6 +437,17 @@ a:active {
   -webkit-box-orient: vertical;
 }
 
+
+.mui-ellipsis-3 {
+  display: -webkit-box;
+  overflow: hidden;
+  white-space: normal !important;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
 .mui-table {
   display: table;
   width: 100%;
@@ -506,54 +483,6 @@ a:active {
   float: right;
 }
 
-.mui-list-unstyled {
-  padding-left: 0;
-  list-style: none;
-}
-
-.mui-list-inline {
-  margin-left: -5px;
-  padding-left: 0;
-  list-style: none;
-}
-
-.mui-list-inline>li {
-  display: inline-block;
-  padding-right: 5px;
-  padding-left: 5px;
-}
-
-.mui-clearfix:after, .mui-clearfix:before {
-  display: table;
-  content: ' ';
-}
-
-.mui-clearfix:after {
-  clear: both;
-}
-
-.mui-bg-primary {
-  background-color: #007aff;
-}
-
-.mui-bg-positive {
-  background-color: #4cd964;
-}
-
-.mui-bg-negative {
-  background-color: #dd524d;
-}
-
-.mui-error {
-  margin: 88px 35px;
-  padding: 10px;
-  border-radius: 6px;
-  background-color: #bbb;
-}
-
-.mui-subtitle {
-  font-size: 15px;
-}
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
@@ -818,140 +747,6 @@ p {
   width: auto;
 }
 
-.mui-off-canvas-wrap .mui-bar {
-  position: absolute !important;
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
-
-.mui-off-canvas-wrap {
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-}
-
-.mui-off-canvas-wrap .mui-inner-wrap {
-  position: relative;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-}
-
-.mui-off-canvas-wrap .mui-inner-wrap.mui-transitioning {
-  -webkit-transition: -webkit-transform 350ms;
-  transition: transform 350ms cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.mui-off-canvas-wrap .mui-inner-wrap .mui-off-canvas-left {
-  -webkit-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0);
-}
-
-.mui-off-canvas-wrap .mui-inner-wrap .mui-off-canvas-right {
-  -webkit-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
-}
-
-.mui-off-canvas-wrap.mui-active {
-  overflow: hidden;
-  height: 100%;
-}
-
-.mui-off-canvas-wrap.mui-active .mui-off-canvas-backdrop {
-  position: absolute;
-  z-index: 998;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: block;
-  transition: background 350ms cubic-bezier(0.165, 0.84, 0.44, 1);
-  background: rgba(0, 0, 0, 0.4);
-  box-shadow: -4px 0 4px rgba(0, 0, 0, 0.5), 4px 0 4px rgba(0, 0, 0, 0.5);
-  -webkit-tap-highlight-color: transparent;
-}
-
-.mui-off-canvas-wrap.mui-slide-in .mui-off-canvas-right {
-  z-index: 10000 !important;
-  -webkit-transform: translate3d(100%, 0, 0);
-}
-
-.mui-off-canvas-wrap.mui-slide-in .mui-off-canvas-left {
-  z-index: 10000 !important;
-  -webkit-transform: translate3d(-100%, 0, 0);
-}
-
-.mui-off-canvas-left, .mui-off-canvas-right {
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  bottom: 0;
-  visibility: hidden;
-  box-sizing: content-box;
-  width: 70%;
-  min-height: 100%;
-  background: #333;
-  -webkit-overflow-scrolling: touch;
-}
-
-.mui-off-canvas-left.mui-transitioning, .mui-off-canvas-right.mui-transitioning {
-  -webkit-transition: -webkit-transform 350ms cubic-bezier(0.165, 0.84, 0.44, 1);
-  transition: transform 350ms cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.mui-off-canvas-left {
-  left: 0;
-}
-
-.mui-off-canvas-right {
-  right: 0;
-}
-
-.mui-off-canvas-wrap:not(.mui-slide-in).mui-scalable {
-  background-color: #333;
-}
-
-.mui-off-canvas-wrap:not(.mui-slide-in).mui-scalable>.mui-off-canvas-left,
-.mui-off-canvas-wrap:not(.mui-slide-in).mui-scalable>.mui-off-canvas-right {
-  width: 80%;
-  -webkit-transform: scale(0.8);
-  transform: scale(0.8);
-  opacity: 0.1;
-}
-
-.mui-off-canvas-wrap:not(.mui-slide-in).mui-scalable>.mui-off-canvas-left.mui-transitioning,
-.mui-off-canvas-wrap:not(.mui-slide-in).mui-scalable>.mui-off-canvas-right.mui-transitioning {
-  -webkit-transition: -webkit-transform 350ms cubic-bezier(0.165, 0.84, 0.44, 1),
-                        opacity 350ms cubic-bezier(0.165, 0.84, 0.44, 1);
-  transition: transform 350ms cubic-bezier(0.165, 0.84, 0.44, 1),
-                opacity 350ms cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.mui-off-canvas-wrap:not(.mui-slide-in).mui-scalable>.mui-off-canvas-left {
-  -webkit-transform-origin: -100%;
-  transform-origin: -100%;
-}
-
-.mui-off-canvas-wrap:not(.mui-slide-in).mui-scalable>.mui-off-canvas-right {
-  -webkit-transform-origin: 200%;
-  transform-origin: 200%;
-}
-
-.mui-off-canvas-wrap:not(.mui-slide-in).mui-scalable.mui-active>.mui-inner-wrap {
-  -webkit-transform: scale(0.8);
-  transform: scale(0.8);
-}
-
-.mui-off-canvas-wrap:not(.mui-slide-in).mui-scalable.mui-active>.mui-off-canvas-left,
-.mui-off-canvas-wrap:not(.mui-slide-in).mui-scalable.mui-active>.mui-off-canvas-right {
-  -webkit-transform: scale(1);
-  transform: scale(1);
-  opacity: 1;
-}
 
 .mui-loading .mui-spinner {
   display: block;
@@ -1096,51 +891,13 @@ p {
   font-weight: 400;
   line-height: 1.42;
   position: relative;
-  display: inline-block;
   margin-bottom: 0;
-  padding: 6px 12px;
-  cursor: pointer;
-  -webkit-transition: all;
-  transition: all;
-  -webkit-transition-timing-function: linear;
-  transition-timing-function: linear;
-  -webkit-transition-duration: 0.2s;
-  transition-duration: 0.2s;
-  text-align: center;
-  vertical-align: top;
+  padding: 0rpx;
   white-space: nowrap;
   color: #333;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  border-bottom-left-radius: 3px;
   background-color: #fff;
-  background-clip: padding-box;
 }
 
-.mui-btn.mui-active:enabled, .mui-btn:enabled:active, button.mui-active:enabled,
-button:enabled:active, input[type=button].mui-active:enabled,
-input[type=button]:enabled:active, input[type=reset].mui-active:enabled,
-input[type=reset]:enabled:active, input[type=submit].mui-active:enabled,
-input[type=submit]:enabled:active {
-  color: #fff;
-  background-color: #929292;
-}
-
-.mui-btn.mui-disabled, .mui-btn:disabled, button.mui-disabled, button:disabled,
-input[type=button].mui-disabled, input[type=button]:disabled,
-input[type=reset].mui-disabled, input[type=reset]:disabled,
-input[type=submit].mui-disabled, input[type=submit]:disabled {
-  opacity: 0.6;
-}
-
-.mui-btn-blue, .mui-btn-primary, input[type=submit] {
-  color: #fff;
-  border: 1px solid #007aff;
-  background-color: #007aff;
-}
 
 .mui-btn-blue.mui-active:enabled, .mui-btn-blue:enabled:active,
 .mui-btn-primary.mui-active:enabled, .mui-btn-primary:enabled:active,
@@ -1486,10 +1243,6 @@ input[type=submit].mui-active:enabled, input[type=submit]:enabled:active {
 .mui-focusin>.mui-bar-header-secondary, .mui-focusin>.mui-bar-nav {
   position: absolute;
 }
-
-/* .mui-focusin>.mui-bar~.mui-content {
-  padding-bottom: 0;
-} */
 
 .mui-bar .mui-btn {
   font-weight: 400;
@@ -1969,7 +1722,6 @@ input[type=submit].mui-active:enabled, input[type=submit]:enabled:active {
 
 .mui-table-view-cell:after {
   position: absolute;
-  right: 0;
   bottom: 0;
   left: 15rpx;
   right: 15rpx;
@@ -2105,42 +1857,6 @@ input[type=submit].mui-active:enabled, input[type=submit]:enabled:active {
 .mui-table-view-cell>.mui-slider-left>.mui-btn:after {
   right: 100%;
   margin-right: -1px;
-}
-
-.mui-table-view-divider {
-  font-weight: 500;
-  position: relative;
-  margin-top: -1px;
-  margin-left: 0;
-  padding-top: 6px;
-  padding-bottom: 6px;
-  padding-left: 15px;
-  color: #999;
-  background-color: #fafafa;
-}
-
-.mui-table-view-divider:after {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: 1px;
-  content: '';
-  -webkit-transform: scaleY(0.5);
-  transform: scaleY(0.5);
-  background-color: #c8c7cc;
-}
-
-.mui-table-view-divider:before {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  height: 1px;
-  content: '';
-  -webkit-transform: scaleY(0.5);
-  transform: scaleY(0.5);
-  background-color: #c8c7cc;
 }
 
 .mui-table-view .mui-media, .mui-table-view .mui-media-body {
@@ -2467,19 +2183,6 @@ input[type=submit].mui-active:enabled, input[type=submit]:enabled:active {
   right: 0;
 }
 
-input, select, textarea {
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: 17px;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-tap-highlight-color: transparent;
-}
-
-input:focus, select:focus, textarea:focus {
-  -webkit-tap-highlight-color: transparent;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-user-modify: read-write-plaintext-only;
-}
-
 input[type=color], input[type=date], input[type=datetime-local],
 input[type=datetime], input[type=email], input[type=month], input[type=number],
 input[type=password], input[type=search], input[type=tel], input[type=text],
@@ -2497,11 +2200,6 @@ input[type=time], input[type=url], input[type=week], select, textarea {
   -webkit-appearance: none;
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-  margin: 0;
-  -webkit-appearance: none;
-}
 
 input[type=search] {
   font-size: 16px;
@@ -2648,15 +2346,7 @@ select:focus {
   border: 0;
 }
 
-.mui-button-row {
-  position: relative;
-  padding-top: 5px;
-  text-align: center;
-}
 
-.mui-input-group .mui-button-row {
-  height: 45px;
-}
 
 .mui-input-row {
   position: relative;
@@ -2695,14 +2385,6 @@ select:focus {
   font-size: 24px;
   top: 8px;
 }
-
-/* .mui-input-row .mui-input-clear~.mui-icon-clear~.mui-icon-speech {
-  display: none;
-} */
-
-/* .mui-input-row .mui-input-clear~.mui-icon-clear.mui-hidden~.mui-icon-speech {
-  display: inline-block;
-} */
 
 .mui-input-row .mui-icon-speech~.mui-placeholder {
   right: 38px;
@@ -3356,85 +3038,6 @@ select:focus {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-.mui-popup-title {
-  font-size: 18px;
-  font-weight: 500;
-  text-align: center;
-}
-
-.mui-popup-title+.mui-popup-text {
-  font-family: inherit;
-  font-size: 14px;
-  margin: 5px 0 0;
-}
-
-.mui-popup-buttons {
-  position: relative;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: flex;
-  height: 44px;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-
-.mui-popup-button {
-  font-size: 17px;
-  line-height: 44px;
-  position: relative;
-  display: block;
-  overflow: hidden;
-  box-sizing: border-box;
-  width: 100%;
-  height: 44px;
-  padding: 0 5px;
-  cursor: pointer;
-  text-align: center;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  color: #007aff;
-  background: rgba(255, 255, 255, 0.95);
-  -webkit-box-flex: 1;
-}
-
-.mui-popup-button:after {
-  position: absolute;
-  z-index: 15;
-  top: 0;
-  right: 0;
-  bottom: auto;
-  left: auto;
-  display: block;
-  width: 1px;
-  height: 100%;
-  content: '';
-  -webkit-transform: scaleX(0.5);
-  transform: scaleX(0.5);
-  -webkit-transform-origin: 100% 50%;
-  transform-origin: 100% 50%;
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
-.mui-popup-button:first-child {
-  border-radius: 0 0 0 13px;
-}
-
-.mui-popup-button:first-child:last-child {
-  border-radius: 0 0 13px 13px;
-}
-
-.mui-popup-button:last-child {
-  border-radius: 0 0 13px;
-}
-
-.mui-popup-button:last-child:after {
-  display: none;
-}
-
-.mui-popup-button.mui-popup-button-bold {
-  font-weight: 600;
-}
 
 .mui-popup-input input {
   font-size: 14px;
@@ -3589,71 +3192,6 @@ body>.mui-progressbar {
   }
 }
 
-.mui-pagination {
-  display: inline-block;
-  margin: 0 auto;
-  padding-left: 0;
-  border-radius: 6px;
-}
-
-.mui-pagination>li {
-  display: inline;
-}
-
-.mui-pagination>li>a, .mui-pagination>li>span {
-  line-height: 1.428571429;
-  position: relative;
-  float: left;
-  margin-left: -1px;
-  padding: 6px 12px;
-  text-decoration: none;
-  color: #007aff;
-  border: 1px solid #ddd;
-  background-color: #fff;
-}
-
-.mui-pagination>li:first-child>a, .mui-pagination>li:first-child>span {
-  margin-left: 0;
-  border-top-left-radius: 6px;
-  border-bottom-left-radius: 6px;
-  background-clip: padding-box;
-}
-
-.mui-pagination>li:last-child>a, .mui-pagination>li:last-child>span {
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-  background-clip: padding-box;
-}
-
-.mui-pagination>li.mui-active>a, .mui-pagination>li.mui-active>a:active,
-.mui-pagination>li.mui-active>span, .mui-pagination>li.mui-active>span:active,
-.mui-pagination>li:active>a, .mui-pagination>li:active>a:active,
-.mui-pagination>li:active>span, .mui-pagination>li:active>span:active {
-  z-index: 2;
-  cursor: default;
-  color: #fff;
-  border-color: #007aff;
-  background-color: #007aff;
-}
-
-.mui-pagination>li.mui-disabled>a, .mui-pagination>li.mui-disabled>a:active,
-.mui-pagination>li.mui-disabled>span,
-.mui-pagination>li.mui-disabled>span:active {
-  opacity: 0.6;
-  color: #777;
-  border: 1px solid #ddd;
-  background-color: #fff;
-}
-
-.mui-pagination-lg>li>a, .mui-pagination-lg>li>span {
-  font-size: 18px;
-  padding: 10px 16px;
-}
-
-.mui-pagination-sm>li>a, .mui-pagination-sm>li>span {
-  font-size: 12px;
-  padding: 5px 10px;
-}
 
 .mui-pager {
   padding-left: 0;
@@ -3706,34 +3244,6 @@ body>.mui-progressbar {
   color: #777;
   border: 1px solid #ddd;
   background-color: #fff;
-}
-
-.mui-modal {
-  position: fixed;
-  z-index: 999;
-  top: 0;
-  overflow: hidden;
-  width: 100%;
-  min-height: 100%;
-  -webkit-transition: -webkit-transform 0.25s, opacity 1ms 0.25s;
-  transition: transform 0.25s, opacity 1ms 0.25s;
-  -webkit-transition-timing-function: cubic-bezier(0.1, 0.5, 0.1, 1);
-  transition-timing-function: cubic-bezier(0.1, 0.5, 0.1, 1);
-  -webkit-transform: translate3d(0, 100%, 0);
-  transform: translate3d(0, 100%, 0);
-  opacity: 0;
-  background-color: #fff;
-}
-
-.mui-modal.mui-active {
-  height: 100%;
-  -webkit-transition: -webkit-transform 0.25s;
-  transition: transform 0.25s;
-  -webkit-transition-timing-function: cubic-bezier(0.1, 0.5, 0.1, 1);
-  transition-timing-function: cubic-bezier(0.1, 0.5, 0.1, 1);
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-  opacity: 1;
 }
 
 .mui-android .mui-modal .mui-bar {
@@ -4267,73 +3777,92 @@ body>.mui-progressbar {
   bottom: 50px;
 }
 
-.mui-android.mui-android-4-0 input:focus,
-.mui-android.mui-android-4-0 textarea:focus {
-  -webkit-user-modify: inherit;
+.mui-pagination
+{
+    display: inline-block;
+
+    margin: 0 auto;
+    padding-left: 0;
+
+    border-radius: 6px;
+}
+.mui-pagination > li
+{
+    display: inline;
+}
+.mui-pagination > li > a,
+.mui-pagination > li > span
+{
+    line-height: 1.428571429;
+
+    position: relative;
+
+    float: left;
+
+    margin-left: -1px;
+    padding: 6px 12px;
+
+    text-decoration: none;
+
+    color: #007aff;
+    border: 1px solid #ddd;
+    background-color: #fff;
+}
+.mui-pagination > li:first-child > a,
+.mui-pagination > li:first-child > span
+{
+    margin-left: 0;
+
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    background-clip: padding-box;
+}
+.mui-pagination > li:last-child > a,
+.mui-pagination > li:last-child > span
+{
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+    background-clip: padding-box;
+}
+.mui-pagination > li:active > a, .mui-pagination > li:active > a:active,
+.mui-pagination > li:active > span,
+.mui-pagination > li:active > span:active,
+.mui-pagination > li.mui-active > a,
+.mui-pagination > li.mui-active > a:active,
+.mui-pagination > li.mui-active > span,
+.mui-pagination > li.mui-active > span:active
+{
+    z-index: 2;
+
+    cursor: default;
+
+    color: #fff;
+    border-color: #007aff;
+    background-color: #007aff;
+}
+.mui-pagination > li.mui-disabled > span,
+.mui-pagination > li.mui-disabled > span:active,
+.mui-pagination > li.mui-disabled > a,
+.mui-pagination > li.mui-disabled > a:active
+{
+    opacity: .6;
+    color: #777;
+    border: 1px solid #ddd;
+    background-color: #fff;
 }
 
-.mui-android.mui-android-4-2 input, .mui-android.mui-android-4-2 textarea,
-.mui-android.mui-android-4-3 input, .mui-android.mui-android-4-3 textarea {
-  -webkit-user-select: text;
+.mui-pagination-lg > li > a,
+.mui-pagination-lg > li > span
+{
+    font-size: 18px;
+
+    padding: 10px 16px;
 }
 
-.mui-ios .mui-table-view-cell {
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-}
+.mui-pagination-sm > li > a,
+.mui-pagination-sm > li > span
+{
+    font-size: 12px;
 
-.mui-plus-visible, .mui-wechat-visible {
-  display: none !important;
-}
-
-.mui-plus-hidden, .mui-wechat-hidden {
-  display: block !important;
-}
-
-.mui-tab-item.mui-plus-hidden, .mui-tab-item.mui-wechat-hidden {
-  display: table-cell !important;
-}
-
-.mui-plus .mui-plus-visible, .mui-wechat .mui-wechat-visible {
-  display: block !important;
-}
-
-.mui-plus .mui-tab-item.mui-plus-visible,
-.mui-wechat .mui-tab-item.mui-wechat-visible {
-  display: table-cell !important;
-}
-
-.mui-plus .mui-plus-hidden, .mui-wechat .mui-wechat-hidden {
-  display: none !important;
-}
-
-.mui-plus.mui-statusbar.mui-statusbar-offset .mui-bar-nav {
-  height: 64px;
-  padding-top: 20px;
-}
-
-.mui-plus.mui-statusbar.mui-statusbar-offset .mui-bar-nav~.mui-content {
-  padding-top: 64px;
-}
-
-.mui-plus.mui-statusbar.mui-statusbar-offset .mui-bar-header-secondary,
-.mui-plus.mui-statusbar.mui-statusbar-offset .mui-bar-nav~.mui-content .mui-pull-top-pocket {
-  top: 64px;
-}
-
-.mui-plus.mui-statusbar.mui-statusbar-offset .mui-bar-header-secondary~.mui-content {
-  padding-top: 94px;
-}
-
-.mui-iframe-wrapper {
-  position: absolute;
-  right: 0;
-  left: 0;
-  -webkit-overflow-scrolling: touch;
-}
-
-.mui-iframe-wrapper iframe {
-  width: 100%;
-  height: 100%;
-  border: 0;
+    padding: 5px 10px;
 }
