--- a/pages/detail/videodetail.wxml
+++ b/pages/detail/videodetail.wxml
@@ -42,30 +42,35 @@
         </view>
         <view class='videoview'>
           <video src='{{firstItem.imgId}}' wx:if="{{!offset.open}}"></video>
-          <view class='videoholder'wx:else></view>
+          <view class='videoholder' wx:else></view>
         </view>
-
+        <!-- 点赞按钮 -->
         <view id="textBox" class="bottom-title">{{firstItem.text}}</view>
         <view wx:if="{{!nice}}" class="zanview iconfont icon-xiangqu" bindtap='nice'>赞</view>
         <view wx:else class="zanedview iconfont icon-xiangqufill" bindtap='nice'>已赞</view>
 
-
+        <!-- 底部上下页 -->
         <view id="bottomBox" class="mui-bottom">
           <view class="mui-row">
-            <view id="lastpage" class="mui-col-sm-6 mui-col-xs-6 lastpage" data-item="{{lastArticle}}" bindtap="gotoPage">
-              <p style="color: darkgrey;">上一篇:</p>
-              <p class="mui-ellipsis-2">{{lastArticle.articleTitle}}</p>
+            <view id="lastpage" class="mui-col-sm-6 mui-col-xs-6 lastpage">
+              <form data-type="gotoPage" data-bean="{{lastArticle}}" bindsubmit="formSubmit" report-submit>
+                <button class="form-btn" form-type="submit">
+                  <p style="color: darkgrey;">上一篇:</p>
+                  <p class="mui-ellipsis-2">{{lastArticle.articleTitle}}</p>
+                </button>
+              </form>
             </view>
-            <view id="nextpage" class="mui-col-sm-6 mui-col-xs-6 nextpage" data-item="{{nextArticle}}" bindtap="gotoPage">
-              <p style="color: darkgrey;">下一篇:</p>
-              <p class="mui-ellipsis-2">{{nextArticle.articleTitle}}</p>
+            <view id="nextpage" class="mui-col-sm-6 mui-col-xs-6 nextpage">
+              <form data-type="gotoPage" data-bean="{{nextArticle}}" bindsubmit="formSubmit" report-submit>
+                <button class="form-btn" form-type="submit">
+                  <p style="color: darkgrey;">下一篇:</p>
+                  <p class="mui-ellipsis-2">{{nextArticle.articleTitle}}</p>
+                </button>
+              </form>
             </view>
           </view>
         </view>
       </view>
-      <!--PC和WAP自适应版-->
-      <!-- <view id="SOHUCS" v-bind:sid="article.articleId"></view>
-  <wxs charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/changyan.js"></wxs> -->
     </scroll-view>
   </view>
 </view>
