--- a/utils/main.wxss
+++ b/utils/main.wxss
@@ -5,9 +5,20 @@
   /*margin-top: 5px*/
 }
 button::after {
-  border: 2px white solid;
-  border-radius: 0;
+  border: none;
 }
+.form-btn .mui-table-view-cell::after{
+  position: absolute;
+  bottom: 0;
+  left: 15rpx;
+  right: 15rpx;
+  height: 1px;
+  content: '';
+  -webkit-transform: scaleY(0.5);
+  transform: scaleY(0.5);
+  background-color: #c8c7cc;
+}
+
 .form-btn {
   border: none;
   border-radius: 0;
@@ -15,9 +26,11 @@ button::after {
   padding: 0;
   margin: 0;
   line-height: 1.5;
+  background-color:transparent;
 }
-
-
+.nextpage .form-btn {
+  text-align: right;
+}
 
 .textview {
   position: relative;
@@ -89,6 +102,7 @@ button::after {
 .row-padding {
   padding: 10rpx 15rpx;
   font-size: 33rpx;
+  text-align:left;
 }
 
 .labelview {
