--- a/pages/html/home.wxml
+++ b/pages/html/home.wxml
@@ -26,60 +26,50 @@
       <text class='titlebar-right iconfont icon-sousuo' bindtap='tap_search'></text>
     </view>
     <!-- 正文 -->
-    <scroll-view class='mui-content'>
+    <scroll-view scroll-x="true" class='mui-content scroll-x-header'>
+      <form class="scroll-x-view" wx:for="{{hotdz}}" wx:key="item.articleId" data-bean="{{item}}" data-type="openDetail" bindsubmit="formSubmit" report-submit>
+        <button class="form-btn dz-title-text" form-type="submit">
+          <text style='color: red;margin-left:-8px;'>【最新段子】</text>
+          <text>{{item.articleTitle}}</text>
+          <view class='home-dz mui-ellipsis-2'>{{item.articleContent}}</view>
+        </button>
+      </form>
+    </scroll-view>
+    <scroll-view>
+      <text class='labelview' hidden='{{hidden}}'>推荐</text>
       <view class="mui-table-view">
-        <form class="" wx:for="{{hotdz}}" wx:key="item.articleId" data-bean="{{item}}" data-type="openDetail" bindsubmit="formSubmit" report-submit>
-          <button class="form-btn dz-title-text" form-type="submit">
-            <text style='color: red;margin-left:-8px;'>【最新段子】</text>
-            <text>{{item.articleTitle}}</text>
-            <view class='home-dz mui-ellipsis-2'>{{item.articleContent}}</view>
-          </button>
-        </form>
-      </view>
-      <text class='labelview' hidden='{{hidden}}'>本月热门</text>
-      <view class="mui-table-view">
-        <form wx:for="{{hotlist}}" wx:key="item.articleId" data-bean="{{item}}" data-type="openDetail" bindsubmit="formSubmit" report-submit>
+        <form wx:for="{{hotlist}}" wx:key="item.articleId" data-bean="{{item}}" data-type="openDetail" bindsubmit="formSubmit" report-submit wx:if="{{index == 0}}">
           <button class="form-btn" form-type="submit">
-            <view class="mui-row row-padding">
-              <view class="mui-col-xs-1 mui-col-sm-1">
-                <view class="{{item.classname}}">{{index+1}}</view>
-              </view>
-              <view class="mui-col-xs-8 mui-col-sm-8">
-                <view class="mui-ellipsis" style="padding: 2px 0px;">{{item.articleTitle}}</view>
-              </view>
-              <view class="mui-col-xs-3 mui-col-sm-3">
-                <view class="mui-ellipsis" style="color: gray;padding: 2px 0px;">阅读({{item.readTime}})</view>
-              </view>
+            <view class="mui-table-view-cell">
+              <view class="mui-ellipsis" style="padding: 2px 0px;">{{item.articleTitle}}</view>
+              <image lazy-load="true" class="img-header" src="{{item.articleImg}}"></image>
+              <view class="mui-ellipsis" style="color: gray;padding: 2px 0px;">阅读({{item.readTime}})</view>
             </view>
           </button>
         </form>
       </view>
-      <text class='labelview' hidden='{{hidden}}'>最近更新</text>
+
       <view class="mui-table-view" wx:for="{{uptodatelist}}" wx:key="item.articleId">
         <form data-type="openDetail" data-bean="{{item}}" bindsubmit="formSubmit" report-submit>
           <button class="form-btn" form-type="submit">
             <view class="mui-table-view-cell">
               <view class="mui-row">
-                <view class="imgview mui-col-xs-2 mui-col-sm-2">
-                  <image class="mui-pull-left" lazy-load="true" src="{{item.articleImg}}"></image>
-                </view>
-                <view class="textview mui-col-xs-8 mui-col-sm-8">
-                  <view class="article-title-text article-title-height">
-                    <view class="mui-ellipsis-2">{{item.articleTitle}}</view>
-                  </view>
-                  <view class="article-title-text mui-row">
-                    <view class="time mui-col-xs-4 mui-col-sm-4">
-                      <view class="iconfont icon-shijian" style='font-size:22rpx;'>{{item.publishTime}}</view>
-                    </view>
-                    <view class="author mui-col-xs-3 mui-col-sm-3">
+                <view class="textview">
+                  <view class="typename">{{item.typeName}}</view>
+                  <view class="mui-ellipsis-3">{{item.articleTitle}}</view>
+                  <view class='item-bottom'>
+                    <view class="author">
                       <view class="iconfont icon-kanguo" style='font-size:22rpx;'>{{item.readTime}}</view>
                     </view>
-                    <view class="author mui-col-xs-2 mui-col-sm-2">
+                    <view class="nice">
                       <view class="iconfont icon-xiangqu" style='font-size:22rpx;'>{{item.niceNum}}</view>
                     </view>
-                    <view class="typename">{{item.typeName}}</view>
+                    <view class="time">
+                      <view class="iconfont icon-shijian" style='font-size:22rpx;'>{{item.publishTime}}</view>
+                    </view>
                   </view>
                 </view>
+                <image class="img-right" lazy-load="true" mode="aspectFill" src="{{item.articleImg}}"></image>
               </view>
             </view>
           </button>
