修复侧滑栏遮挡全屏的问题

--- a/template/offset.wxml
+++ b/template/offset.wxml
@@ -1,6 +1,6 @@
 <template name="offset">
   <view class="page-bottom {{open? 'c-state-1' : 'c-state-2'}}" catchtouchmove='stopPageScroll'>
-    <view class="page-content mui-col-sm-8 mui-col-xs-8">
+    <view class="page-content" style='width:70%;float:left;'>
       <view class="off-title">
         <text>轻松一下</text>
       </view>
@@ -26,8 +26,6 @@
         <navigator url="../../pages/html/about" class='iconfont icon-pinglun'>联系我们</navigator>
       </view>
     </view>
-    <view class="mui-col-sm-4 mui-col-xs-4" style='height:100%;' bindtap='tap_ch'>
-
-    </view>
+    <view class="mui-col-xs-4" style='height:100%;width:30%;float:left;' bindtap='tap_ch'></view>
   </view>
 </template>
